Started Viz assignment 4

--- a/Python/UM Spcialization/DS_with_Python/Week 3/Handling_files_on_web_and_ZippedFiles.ipynb
+++ b/Python/UM Spcialization/DS_with_Python/Week 3/Handling_files_on_web_and_ZippedFiles.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "Content of reponse can be examined using methods like  \n",
     "- response.text - Access content as strings, using the default encoding  \n",
-    "- response.content - Access the contest as Binary Bytes  \n",
+    "- response.content - Access the content as Binary Bytes  \n",
     "- response.encoding - check the encoding being used  \n",
     "- response.json() - can access content if is in json\n",
     "- zp = zipfile.ZipFile(io.BytesIO(response.content)) - for zip directories \n",
