--- a/Python/UM Spcialization/Applied_Plotting/Week 4/Seaborn_plotting.ipynb
+++ b/Python/UM Spcialization/Applied_Plotting/Week 4/Seaborn_plotting.ipynb
@@ -17,7 +17,7 @@
     "- Styles  \n",
     "- Complex plots  \n",
     "  - Distribution plots \n",
-    "  - jointplots , hexbinolots, 2d kde plots\n",
+    "  - jointplots , hexbinplots, 2d kde plots\n",
     "  - pairplot like scattermatrix in pd.plotting. \n",
     "  - violin plots, swarm plots serve well for observing a continuous var within categories of\n",
     "    a **Categorical variable**"
