--- a/Python/UM Spcialization/Applied_Plotting/Week3/Subplots_and_complexPlots.ipynb
+++ b/Python/UM Spcialization/Applied_Plotting/Week3/Subplots_and_complexPlots.ipynb
@@ -3377,7 +3377,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Binning Choices"
+    "##### Binning Choices \n",
+    "Read pdf : Decision theoretic approach of selecting bins"
    ]
   },
   {
