Week 2 ML in progress

--- a/Python/UM Spcialization/Machine_Learning/Week 1/Intro_to_ML.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 1/Intro_to_ML.ipynb
@@ -82,7 +82,7 @@
     "    Eg: Customer visiting your site could be : Active, Passive, Intermittend users. \n",
     "  - Anomaly Detection : Aspect of detecting behavior that is odd with what you would normally see. \n",
     "    Train a model on good cases only, odd example is recognized as anomaly. \n",
-    "    Fraud, Cyber hackingm spam emails \n",
+    "    Fraud, Cyber hacking spam emails \n",
     "  \n",
     "### 4. Iterative Process containing - \n",
     "Premil :\n",
@@ -96,7 +96,7 @@
     "  - parametric/ non-parametric \n",
     "  - typical choice varies on speed of learning, accuracy, bias , generalizability (variance), interpretability  \n",
     "3. Evaluation metric \n",
-    "  - Performance of the learned function on training data on evaluation data. \n",
+    "  - Performance of the learned function on training data and n evaluation data. \n",
     "  - Choice of metric governed by problem at hand \n",
     "  "
    ]
@@ -2304,7 +2304,7 @@
    "source": [
     "##### Inferences \n",
     "- mass and width may have some outliers. \n",
-    "- height and width can could be predictors to sperate at least two categories. "
+    "- height and width could be predictors to sperate at least two categories. "
    ]
   },
   {
