Week 2 ML, pipelines wip

--- a/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
@@ -28,20 +28,28 @@
     "  - comparison of tree based feature selection vs lasso feature selection\n",
     "3. Coordinate descent -  used in lasso\n",
     "4. All types of regressions in sklearn's GLM module \n",
-    "- Lars \n",
-    "- LarsLasso \n",
-    "- Multi Task Elastic net , and Lasso\n",
-    "- OMP \n",
-    "- Bayesian Regression \n",
-    "- ARD (Automatic Relevance Determination)\n",
-    "- SGD\n",
-    "- Perceptron \n",
-    "- Passive Aggressive Algorithms\n",
-    "- Robust Regressions \n",
-    "  - Random Sample Consensus (RanScan)\n",
-    "  - Theil-Sen Estimator \n",
-    "  - Huber Regression \n",
-    "- Polynomial Regression with basis functions  "
+    "    - Lars \n",
+    "    - LarsLasso \n",
+    "    - Multi Task Elastic net , and Lasso\n",
+    "    - OMP \n",
+    "    - Bayesian Regression \n",
+    "    - ARD (Automatic Relevance Determination)\n",
+    "    - SGD\n",
+    "    - Perceptron \n",
+    "    - Passive Aggressive Algorithms\n",
+    "    - Robust Regressions \n",
+    "      - Random Sample Consensus (RanScan)\n",
+    "      - Theil-Sen Estimator \n",
+    "      - Huber Regression \n",
+    "    - Polynomial Regression with basis functions  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Bayesian Optimization for searching through hyperparameter space \n",
+    "   - building on Grid Search and RandomizedCVSearch "
    ]
   },
   {
