--- a/Python/UM Spcialization/Machine_Learning/Week 2/3_Tuning_Model_Hyperparameters.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 2/3_Tuning_Model_Hyperparameters.ipynb
@@ -1250,6 +1250,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2 Randomized search CV using cross validation \n",
+    "- When hyperparamter space becomes huge, it becomes a problem to go through each and every combination of \n",
+    "paramters to try to find the best combination \n",
+    "- Randomized search CV provides a benefit of \n",
+    "  - fixing the no. of combinations to be tried - like a budget with user specified n_iters to be run, and a dictionary mapping each hyperparameter, and distribution it should be sampled from.\n",
+    "- **More advanced approaches can include choosing parameters based on results derived from scored parameters**  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Tips for hyperparameter tuning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
