--- a/Spark/Spark_Manipal/Code/1_RDDs_MemoryMgmt_Optimizations.ipynb
+++ b/Spark/Spark_Manipal/Code/1_RDDs_MemoryMgmt_Optimizations.ipynb
@@ -251,7 +251,7 @@
    "source": [
     "#### 5. Memory Management \n",
     "- When RDD's are created, they are created in RAM. What happens if memory is used up. \n",
-    "  - RDDs are ejected by LRU (Last used rule) \n",
+    "  - RDDs are ejected by LRU (Least recently used) \n",
     "  - Persisting RDDs affects this rule, to be covered later in detail. \n",
     "  - **Also, if RDDs are not persisted, then they are cleaned from the memory after an action is called**"
    ]
@@ -292,21 +292,197 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 7. Paired RDD operations and case study"
+    "#### 7. Paired RDD operations and case study\n",
+    "- pair RDDs have k, v pairs \n",
+    "- many methods available : grouping, counting, aggregating over groups , join etc\n",
+    "- Common flow of operations. \n",
+    "  - Creating pair RDDs\n",
+    "    - map, flatMap"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8. Memory Management - Persistence, Caching, Serialization"
+    "#### Case Study, using telecom weblogs\n",
+    "1. What are the potential marketable customers for MMS product\n",
+    "  - jpg, mp3, mp4 type of message\n",
+    "  - Data given in log file:  ip address, phone number,  time, file type, address, file link,\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ip_rdd = sc.textFile('/user/sumad/weblogs/*.log')\n",
+    "#ip_rdd.take(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[u'3.94.78.5 - 69827 [15/Sep/2013:23:58:36 +0100] \"GET /KBDOC-00033.html HTTP/1.0\" 200 14417 \n",
+    " \"http://www.loudacre.com\"  \"Loudacre Mobile Browser iFruit 1\"', \n",
+    " u'3.94.78.5 - 69827 [15/Sep/2013:23:58:36 +0100] \"GET /theme.css HTTP/1.0\" 200 3576 \n",
+    " \"http://www.loudacre.com\"  \"Loudacre Mobile Browser iFruit 1\"']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. By customer id, day, can we get count of mms type messages sent\n",
+    "# 2. Get by customer id, average mms messages per day, get top 10 \n",
+    "\n",
+    "extract_id_day_mms = lambda x: (x[2], x[3][1:12])\n",
+    "def mms(x):\n",
+    "    if(('html' in x) | ('png' in x) | ('css' in x)):\n",
+    "        return(1)\n",
+    "    else:\n",
+    "        return(0)    \n",
+    "ip_rdd2 = ip_rdd.filter(mms).map(lambda x: x.split(' ')).map(extract_id_day_mms)\n",
+    "by_cust = ip_rdd2.map(lambda x: (x[0], 1)).reduceByKey(lambda x,y:x+y)\n",
+    "#by_cust.take(5)\n",
+    "by_cust_dt = ip_rdd2.map(lambda x: (x, 1)).reduceByKey(lambda x,y:x+y)\\\n",
+    ".map(lambda x:(x[0][0],x[1])).reduceByKey(lambda x,y:x+y)\n",
+    "#by_cust_dt.take(5)\n",
+    "avg_per_day = by_cust.leftOuterJoin(by_cust_dt)\\\n",
+    ".map(lambda x: (x[0],x[1][0]/x[1][1]))\\\n",
+    ".sortBy(keyfunc = lambda x:x[1],ascending = False)\n",
+    "avg_per_day.take(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(avg_per_day.toDebugSchema())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. Optimization in Spark"
+    "#### 8. Memory Management - Persistence, Caching, Serialization\n",
+    "- When RDD's are created, they are created in RAM. What happens if memory is used up. \n",
+    "  - RDDs are ejected by LRU (Least recently used) \n",
+    "  - If RDD is persisted, then it is given priority \n",
+    "- Persist vs Cache \n",
+    "  - Notes\n",
+    "  - 6 options with consideration for : Memory/Disk , Serialization or not, Copying partitions or not. \n",
+    "    - allow fo considering available memory vs disk, conserve memory ( by serializing) but increasing \n",
+    "    processing time for deserializing , replication to revover from failure if persisted rdd is lost (saves time,\n",
+    "    when a long pipeline is built)\n",
+    "  - Link to documentation : https://spark.apache.org/docs/2.3.0/rdd-programming-guide.html#rdd-persistence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark import StorageLevel\n",
+    "test = sc.parallelize([1,2,3,4,5,6])\n",
+    "test1 = test.map(lambda x : x**2)\n",
+    "test2 = test1.filter(lambda x : x%2 ==0)\n",
+    "test2.collect()\n",
+    "\n",
+    "test1.persist(storageLevel = StorageLevel.MEMORY_ONLY)\n",
+    "test2.collect()\n",
+    "test2.collect() # this is faster, because persistence take effect first time after \n",
+    "                # rdd is specified for persistence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9. Optimization in Spark\n",
+    "- Stages and Tasks \n",
+    "   - Stages created whenever there is partitioning \n",
+    "   - Optimization is focussed on reducing stages as much as possible, involves design discussions from architects \n",
+    "   - Short circuiting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check, the below operation should not cause a repartition , and hence should be a stage\n",
+    "extract_id_day_mms = lambda x: (x[2], (x[3][1:12],1))\n",
+    "def mms(x):\n",
+    "    if(('html' in x) | ('png' in x) | ('css' in x)):\n",
+    "        return(1)\n",
+    "    else:\n",
+    "        return(0)\n",
+    "    \n",
+    "ip_rdd = sc.textFile('/user/sumad/weblogs/*.log')\n",
+    "ip_rdd2 = ip_rdd.filter(mms).map(lambda x: x.split(' ')).map(extract_id_day_mms)\n",
+    "ip_rdd2.take(5)\n",
+    " print(ip_rdd2.toDebugString())\n",
+    "    \n",
+    "\"\"\"\n",
+    "(182) PythonRDD[3] at RDD at PythonRDD.scala:49 []\n",
+    "  |   /user/sumad/weblogs/*.log MapPartitionsRDD[1] at textFile at NativeMethodAccessorImpl.java:0 []\n",
+    "  |   /user/sumad/weblogs/*.log HadoopRDD[0] at textFile at NativeMethodAccessorImpl.java:0 []\n",
+    "  \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stages and tasks with times can be better seen on Spark UI \n",
+    "- Giving spark the full job , lets it optimize the total run time  \n",
+    "- Big executions, should be given as spark submit presumably, rather than interactively, ti optimize time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "print(avg_per_day.toDebugString())\n",
+    "\n",
+    "(182) PythonRDD[28] at RDD at PythonRDD.scala:49 []\n",
+    "  |   MapPartitionsRDD[22] at mapPartitions at PythonRDD.scala:129 []\n",
+    "  |   ShuffledRDD[21] at partitionBy at NativeMethodAccessorImpl.java:0 []\n",
+    "  +-(182) PairwiseRDD[20] at sortBy at <stdin>:3 []\n",
+    "      |   PythonRDD[19] at sortBy at <stdin>:3 []\n",
+    "      |   PartitionerAwareUnionRDD[16] at union at NativeMethodAccessorImpl.java:0 []\n",
+    "      |   PythonRDD[14] at RDD at PythonRDD.scala:49 []\n",
+    "      |   MapPartitionsRDD[5] at mapPartitions at PythonRDD.scala:129 []\n",
+    "      |   ShuffledRDD[4] at partitionBy at NativeMethodAccessorImpl.java:0 []\n",
+    "      +-(182) PairwiseRDD[3] at reduceByKey at <stdin>:1 []\n",
+    "          |   PythonRDD[2] at reduceByKey at <stdin>:1 []\n",
+    "          |   /user/sumad/weblogs/*.log MapPartitionsRDD[1] at textFile at NativeMethodAccessorImpl.java:0 []\n",
+    "          |   /user/sumad/weblogs/*.log HadoopRDD[0] at textFile at NativeMethodAccessorImpl.java:0 []\n",
+    "      |   PythonRDD[15] at RDD at PythonRDD.scala:49 []\n",
+    "      |   MapPartitionsRDD[13] at mapPartitions at PythonRDD.scala:129 []\n",
+    "      |   ShuffledRDD[12] at partitionBy at NativeMethodAccessorImpl.java:0 []\n",
+    "      +-(182) PairwiseRDD[11] at reduceByKey at <stdin>:2 []\n",
+    "          |   PythonRDD[10] at reduceByKey at <stdin>:2 []\n",
+    "          |   MapPartitionsRDD[9] at mapPartitions at PythonRDD.scala:129 []\n",
+    "          |   ShuffledRDD[8] at partitionBy at NativeMethodAccessorImpl.java:0 []\n",
+    "          +-(182) PairwiseRDD[7] at reduceByKey at <stdin>:1 []\n",
+    "              |   PythonRDD[6] at reduceByKey at <stdin>:1 []\n",
+    "              |   /user/sumad/weblogs/*.log MapPartitionsRDD[1] at textFile at NativeMethodAccessorImpl.java:0 []\n",
+    "              |   /user/sumad/weblogs/*.log HadoopRDD[0] at textFile at NativeMethodAccessorImpl.java:0 []\n",
+    "              \"\"\""
    ]
   },
   {
