Working on Week 2 ML

--- a/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Difference in solvers used inside scikit learn's lass/ridge regression implementation \n",
+    "1. Difference in solvers used inside scikit learn's ridge regression implementation \n",
     "  - ‘svd’, ‘cholesky’, ‘lsqr’, ‘sparse_cg’, ‘sag’, ‘saga’ \n",
     "  - Singular Value Decomposition \n",
     "  - Conjugate Gradient Descent \n",
