--- a/Python/UM Spcialization/Machine_Learning/Week 2/4_GLMs.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 2/4_GLMs.ipynb
@@ -1768,7 +1768,7 @@
     "$\\Sigma_{i=1}^m[y^{(i)} - (\\widehat{\\beta_0} + \\widehat{\\beta_1}*x^{(i)}_1 + ... + \\widehat{\\beta_n}*x^{(i)}_n)]^2 + \n",
     "\\alpha * \\Sigma_{j=1}^n\\beta^2_j$ \n",
     "\n",
-    "- **Notice bias term is not used in regularization term**\n",
+    "- **bias term is not used in regularization term**\n",
     "\n",
     "- **Alpha** \n",
     "  - Alpha controls the extent of regularization, is > 0 \n",
@@ -5345,11 +5345,10 @@
    "metadata": {},
    "source": [
     "#### 4. Lasso Regression  \n",
-    "4.1 Cost Function  \n",
-    "4.2 Effect on coefficients, how to use Lasso for variable selection  \n",
-    "4.3 Lasso vs Ridge - When to use which  \n",
-    "4.4 Tuning Alpha  \n",
-    "4.5 How is optimization problem solved in lasso / solver used"
+    "4.1 Cost Function, how optimization problem is solved  \n",
+    "4.2 L1 based variable selection  \n",
+    "4.3 Tuning Alpha  \n",
+    "4.4 Lasso vs Ridge - When to use which  "
    ]
   },
   {
@@ -5359,36 +5358,43 @@
     "#### 4.1 Cost Function\n",
     "Cost function = f($\\beta$) = \n",
     "$ \\frac{1}{2m}\\Sigma_{i=1}^m[y^{(i)} - (\\widehat{\\beta_0} + \\widehat{\\beta_1}*x^{(i)}_1 + ... + \\widehat{\\beta_n}*x^{(i)}_n)]^2 + \n",
-    "\\alpha * \\Sigma_{j=1}^n|\\beta_j|$ "
+    "\\alpha * \\Sigma_{j=1}^n|\\beta_j|$  \n",
+    "- Intercept terms is not kept as part of L2 term\n",
+    "- Cost function is not differentiable at w = 0, as |w| is not differentiable at 0. \n",
+    "- Coordinate descent algorithm is used to solve the optimization problem. \n",
+    "  -  Compared to gradient descent it is slower and takes time to converge. \n",
+    "  - 'tol' parameter aids to get to a stopping point, if the max update amongst weights is less than the tolerance. \n",
+    "  - Since convergence is slow, it may be a good idea to keep max_iter to a high a number than default 1000  \n",
+    "  - Coordinate descent results in elimination of variables, and hence their weights become 0."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.2 Lasso for variable selection, other comparable linar regression methods like LarsCV, ElasticNet \n",
+    "#### 4.2 Lasso for variable selection /L1 based feature selection\n",
     "- Uses an L1 penalty term \n",
-    "- **L1 penalty term has an effect that it reduces the coefficients of weak variables to 0, unlike ridge, \n",
-    "   hence serving as a model based variable selection technique**  \n",
-    "- When goal is feature selection, along with fitting a specific algorithm, Lasso can do a good job. Scikit\n",
-    "  learn provides a feature selection class 'SelectFromModel in sklearn.feature_selection to do selection based\n",
-    "  on a model,other linear models that could be used are Logistic Regression or SVM\n",
+    "- **L1 penalty term has an effect that it reduces the coefficients of weak variables to 0 (coordinate descent), unlike ridge, hence serving as a model based variable selection technique**   \n",
+    "- **IN FACT L1 regularized algorithms are used for feature selection - Lasso for regression, and Logistic Regression and LinearSVC for classification**   \n",
+    "- In case of multiple high colinear variables, lasso tends to choose one of the variables randomly, making all\n",
+    "  others zero.\n",
+    "-  Scikitlearn provides a feature selection class 'SelectFromModel in sklearn.feature_selection to do selection based\n",
+    "  on a model,other linear models that could be used are Logistic Regression or SVM \n",
     "  - Reference : https://scikit-learn.org/stable/modules/feature_selection.html#l1-feature-selection\n",
-    "  - How to use Lasso for feature selection is shown below\n",
-    "- Lasso vs Lars vs Elastic Net-\n",
-    "  - Lasso has been seen to work well in a high dimensional setting with multiple colinear variables. \n",
-    "    It drops all but one variable, randomly.\n",
-    "- LarsCV \n",
-    "  - \n",
-    "- Elastic Net  \n",
-    "   "
+    "  - How to use Lasso for feature selection is shown below   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using Lasso for feature selection"
+    "#### 4.3 Using Lasso for feature selection and tuning alpha  \n",
+    "- alpha being hyperparameter will influence features in the solution of lasso. \n",
+    "- get a correlation matrix between features\n",
+    "- strategy could be, use a gridsearchCV\n",
+    "  - assess predictive performance over chosen alphas \n",
+    "  - assess how parameters reduce to zeros with increase in alpha on train set  \n",
+    "  - strike a balance, if needed to keep certain features"
    ]
   },
   {
@@ -5433,8 +5439,13 @@
    "metadata": {},
    "source": [
     "#### 4.3 Lasso vs Ridge \n",
-    "- use ridge when several variables can contribute small-medium effects\n",
-    "- can use lasso when only some variables can conribute medium - large effects"
+    "- use ridge when several variables can contribute small-medium effects, however if there are several variables, \n",
+    "  it might not be practical to have many of them in the model\n",
+    "- can use lasso when only some variables can conribute medium - large effects, often preferable in case of high dimensionality \n",
+    "- In case of colinear variables, ridge will keep all of them , they all carry different weights, lasso tends to do random selection of one, based on alpha  \n",
+    "- Lasso needs more training iterations for convergence (coordinate descent)  \n",
+    "- In case of high dimensionality, and colinearity, elastic net can combine sparse properties of lasso and stability \n",
+    " of ridge"
    ]
   },
   {
