Week 2 ML work in progress

--- a/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
@@ -26,7 +26,12 @@
    "source": [
     "2. sklearn's Feature selection module \n",
     "  - comparison of tree based feature selection vs lasso feature selection\n",
-    "3. Coordinate descent -  used in lasso\n",
+    "3. Coordinate descent \n",
+    " - How problem of non-differentiability is solved in lasso \n",
+    " - How regularization path is generated for lassoCV, ridgeCV, as well as elastic net.\n",
+    "   - And how in elastic net, grid of alphas is generated based on $\\rho$ aka l1_ratio  \n",
+    " - understand thresholds - tol, derivation of alphas in lassoCV, lassolarsCV esp. how lars algo. creates alphas to\n",
+    "    explore  \n",
     "4. All types of regressions in sklearn's GLM module \n",
     "    - Lars \n",
     "    - LarsLasso \n",
@@ -49,7 +54,12 @@
    "metadata": {},
    "source": [
     "5. Bayesian Optimization for searching through hyperparameter space \n",
-    "   - building on Grid Search and RandomizedCVSearch "
+    "   - building on Grid Search and RandomizedCVSearch \n",
+    "6. What is the meaning of ridge's stability property under rotation   \n",
+    "7. Understand solvers in logistic regression \n",
+    "  - newton-cg, lbfgs, sag, saga \n",
+    "  - Post that explains somebit - https://stackoverflow.com/questions/38640109/logistic-regression-python-solvers-defintions  \n",
+    "8. Understand SGD  "
    ]
   },
   {
