Week 2 SVM complete

--- a/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
@@ -59,7 +59,16 @@
     "7. Understand solvers in logistic regression \n",
     "  - newton-cg, lbfgs, sag, saga \n",
     "  - Post that explains somebit - https://stackoverflow.com/questions/38640109/logistic-regression-python-solvers-defintions  \n",
-    "8. Understand SGD  "
+    "8. Need to regularizing intercept term in logistic regression, and not in Ridge and lasso., why do intercept scaling \n",
+    "9. Benefit of choosing -1 and 1 as class labels in logistic regression vs 0 and 1 \n",
+    "9. Understand SGD  : prominent algorithm for solving large scale problems with logistic loss, huber loss, linear svm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11. Linear SVC mathemtical formulation, loss function, calculation of probability estimates using Platt's scaling "
    ]
   },
   {
