--- a/Python/UM Spcialization/Machine_Learning/Week 2/1_Synthetic_Data_and_kNN.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 2/1_Synthetic_Data_and_kNN.ipynb
@@ -6916,12 +6916,19 @@
    "source": [
     "#### c. Pros and Cons of knn \n",
     "\n",
-    "|Pros|Cons\n",
+    "|Pros|Cons|\n",
     "|:-|:-|\n",
     "|1.Simple to understand, no assumptions are made on distribution of data|1. If no. of features are many, can be slow to train|\n",
     "|2.Good to set a benchmark|2. Performance esp. decreases if data is sparse, with many features|\n",
     "|3. -|3. Performance changes with small changes in data, so is'nt it good to detect shifts in real world data compared to training data|\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
