--- a/Python/UM Spcialization/Machine_Learning/Week 2/2_GLMs.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 2/2_GLMs.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,15 @@
     "where $z = \\beta_0 + \\beta_1x_1 + ... + \\beta_nx_n$ \n",
     "-  Logistic function scales the weighted transformation of predictors between a scale of 0 to 1 \n",
     "So, it is a GLM, still a linear model in parameters \n",
-    "-  $J = \\frac{-1}{m}\\sum_{i=1}^m y^{(i)}log(\\widehat{y^{(i)}}) + (1-y^{(i)})log(1-\\widehat{y^{(i)}})$"
+    "-  $J = \\frac{-1}{m}\\sum_{i=1}^m y^{(i)}log(\\widehat{y^{(i)}}) + (1-y^{(i)})log(1-\\widehat{y^{(i)}})$\n",
+    "- Log of Odds conversion of hpyothesis, and interpretation of coefficents \n",
+    "- Hypothesis tests : LR test , Wald's test for Betas \n",
+    "- Goodness of fit : HL test \n",
+    "- Variable selection for logistic regression:\n",
+    "  - WOE and IV \n",
+    "  - IV is close to entropy (measure of impurity)\n",
+    "  - For EDA:\n",
+    "    - Look for linear relationship between log of odds and mean/median withins deciles of a cont. variable"
    ]
   },
   {
@@ -960,7 +968,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading 20news dataset. This may take a few minutes.\n",
+      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
@@ -972,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,16 +1008,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"From: lerxst@wam.umd.edu (where's my thing)\\nSubject: WHAT car is this!?\\nNntp-Posting-Host: rac3.wam.umd.edu\\nOrganization: University of Maryland, College Park\\nLines: 15\\n\\n I was wondering if anyone out there could enlighten me on this car I saw\\nthe other day. It was a 2-door sports car, looked to be from the late 60s/\\nearly 70s. It was called a Bricklin. The doors were really small. In addition,\\nthe front bumper was separate from the rest of the body. This is \\nall I know. If anyone can tellme a model name, engine specs, years\\nof production, where this car is made, history, or whatever info you\\nhave on this funky looking car, please e-mail.\\n\\nThanks,\\n- IL\\n   ---- brought to you by your neighborhood Lerxst ----\\n\\n\\n\\n\\n\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,16 +1053,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "          dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "          lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "          ngram_range=(1, 1), preprocessor=None, stop_words='english',\n",
+       "          strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "          tokenizer=None, vocabulary=None)),\n",
+       " ('tfidf_tfr',\n",
+       "  TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=True)),\n",
+       " ('clf',\n",
+       "  LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "            intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+       "            n_jobs=None, penalty='l2', random_state=None, solver='warn',\n",
+       "            tol=0.0001, verbose=0, warm_start=False))]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe.steps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1283,7 @@
        "           tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3980,13 +4031,6 @@
     "clf = SGDClassifier()\n",
     "clf.get_params()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -4005,7 +4049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
