Bulk changes to DL, UM spec and spark MLLib

--- a/Python/UM Spcialization/Machine_Learning/Week 1/Intro_to_ML.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 1/Intro_to_ML.ipynb
@@ -4,14 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pending \n",
-    "- Understand function to generate decision boundary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Basics of ML \n",
     "1. Why ML, why not learning using rules. \n",
     "2. Application of ML in today's world \n",
@@ -31,7 +23,7 @@
     "- Need for Learning from examples vs making deterministic rules \n",
     "  - How do you write a program to convert human speech, addressing accents, subtelity of context etc would be \n",
     "    difficult. \n",
-    "  - ENhancements to this rule woule be cumbersome. \n",
+    "  - Enhancements to this rule woule be cumbersome. \n",
     "- ML gives us a technology to learn from examples, and learn rules, i.e teach computer how to make a rule. \n",
     "  Can call it inductive learning vs deductive vs bayesian.  \n",
     "-  ML should be able to generalize well on new examples, and hence be able to learn from examples. "
@@ -6694,7 +6686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
