--- a/Python/UM Spcialization/Machine_Learning/Week 2/6_Pipelines.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 2/6_Pipelines.ipynb
@@ -31,12 +31,12 @@
     "- Common steps in ML are feature engineering, selection, model training with parameter tuning, scoring and evaluation. \n",
     "- All these steps can be bound together using pipeline class \n",
     "- Terms:\n",
-    "  - Estimator : Any class which uses data to learn, these are classifiers, regressors, feature selectors, feature scalers etc\n",
-    "  - Transformer : Estimator that has fit and transform method  \n",
-    "  - FeatureUnion : Used to combine the inputs of transformers that create feature space\n",
+    "  - Estimator : Any class which uses data to learn, these are classifiers, regressors, feature selectors, feature scalers etc. They have fit method, and can have predict\n",
+    "  - Transformer : Estimator that implements fit and transform method  \n",
+    "  - FeatureUnion : Used to combine the outputs of transformers that create feature space\n",
     "  - TransformedTargetRegressor : Used to act on y to transform y  \n",
     "  - Pipeline : Chain several estimators, all estimators except last one should be a transformer, last can be any estimator\n",
-    "    - **As a result, pipeline object has all methods that last estimator has, including fit and transform(it there).**\n",
+    "    - **As a result, pipeline object has all methods that last estimator has, including fit and transform(if there).**\n",
     "    - When fit method is called on pipeline, it in turn calls fit and transform on all previous transformers"
    ]
   },
@@ -608,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
