--- a/Spark/Spark_Manipal/Code/2_DataFrames_and_SparkSQL.ipynb
+++ b/Spark/Spark_Manipal/Code/2_DataFrames_and_SparkSQL.ipynb
@@ -15,11 +15,14 @@
     "  - Direct data load from RDBMS\n",
     "5. Data frame syntax\n",
     "6. Using SQL through temp tables \n",
-    "7. Performance in SparkSQL \n",
-    "  - Use of Explain to compare two methods. \n",
-    "  - Checking default partitions\n",
+    "7. Performance in SparkSQL : How to manage  \n",
+    "  - Requesting resources is itrative, start by estimating operations and data size, where will you persist etc \n",
+    "  - Then essentially through memory management and monitoring shuffle or repartioning operations that cause n/w  \n",
+    "    trasnsfer\n",
+    "  - Use of Explain to compare two competing methods. , and see DAG\n",
+    "  - Checking default partitions, can become a bottle neck or sometimes create small files \n",
     "  - Use of catalyst optimizer\n",
-    "  - Broadcasting\n",
+    "  - Broadcasting when joining \n",
     "8. Structured Streaming   "
    ]
   },
@@ -47,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
