ML week 2 commits

--- a/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Follow_Up_Learning.ipynb
@@ -53,8 +53,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Bayesian Optimization for searching through hyperparameter space \n",
+    "5. Hyperparameter tuning \n",
+    "   - Bayesian Optimization for searching through hyperparameter space  \n",
     "   - building on Grid Search and RandomizedCVSearch \n",
+    "   - more on how eval. metric can be regularized while estimating performance of method of choosing best model based on grid search CV. \n",
     "6. What is the meaning of ridge's stability property under rotation   \n",
     "7. Understand solvers in logistic regression \n",
     "  - newton-cg, lbfgs, sag, saga \n",
