--- a/Python/UM Spcialization/Machine_Learning/Week 2/5_Tuning_Model_Hyperparameters.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 2/5_Tuning_Model_Hyperparameters.ipynb
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sklearn \n",
     "from matplotlib import pyplot as plt \n",
-    "%matplotlib notebook\n",
+    "#%matplotlib notebook\n",
     "plt.style.use('bmh')"
    ]
   },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 1.0, 'cache_size': 200, 'class_weight': None, 'coef0': 0.0, 'decision_function_shape': 'ovr', 'degree': 3, 'gamma': 'auto_deprecated', 'kernel': 'rbf', 'max_iter': -1, 'probability': False, 'random_state': None, 'shrinking': True, 'tol': 0.001, 'verbose': False}\n"
+     ]
+    }
+   ],
    "source": [
     "# invoke estimator\n",
     "svc = SVC()\n",
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +145,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    mean_test_f1  mean_test_precision  mean_test_recall\n",
+      "0       0.960192             0.952930          0.968421\n",
+      "1       0.956882             0.946719          0.968421\n",
+      "2       0.956434             0.955943          0.957895\n",
+      "3       0.956291             0.955396          0.957895\n",
+      "4       0.932789             0.943661          0.922807\n",
+      "5       0.946792             0.929721          0.964912\n",
+      "6       0.924470             0.948942          0.901754\n",
+      "7       0.950318             0.937076          0.964912\n",
+      "8       0.922894             0.945642          0.901754\n",
+      "9       0.936522             0.924534          0.950877\n",
+      "10      0.922894             0.945642          0.901754\n",
+      "11      0.923305             0.921968          0.926316\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "report = pd.DataFrame(gs.cv_results_)\n",
@@ -149,9 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "  kernel='linear', max_iter=-1, probability=False, random_state=None,\n",
+       "  shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Refit estimator on the full training set\n",
     "gs.best_estimator_"
@@ -159,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best params : {'C': 1, 'kernel': 'linear'}\n",
+      "Best cv f1 test score : 0.9602 with std : 0.0191\n",
+      "Best cv f1 train score : 0.9717 with std : 0.0062\n",
+      "f1 score on holdout set : 0.9861\n"
+     ]
+    }
+   ],
    "source": [
     "print('Best params :',gs.best_params_ )\n",
     "print('Best cv f1 test score : {0:.4f} with std : {1:.4f}'.format(mean_test_f1,std_test_f1))\n",
