--- a/Python/UM Spcialization/Machine_Learning/Week 2/Feature_Extraction.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 2/Feature_Extraction.ipynb
@@ -258,10 +258,13 @@
     "- $idf(t) = log(\\frac{n_d}{1+df(t)})$ , textbook definition, range of the function can go from -inf to inf. \n",
     "- sklearn implement smoothed and non-smoothed versions, and has an option to normalize across rows/documents \n",
     "  - non-smoothed\n",
-    "  $idf(t) = 1 + log( \\frac{n_d}{df(t)})$ , this is always >=1, but can have 0 division on new data\n",
+    "  $idf(t) = 1 + log( \\frac{n_d}{df(t)})$ , this is always >=1, but can have 0 division,  which\n",
+    "  could happen if a vocab is supplied, rather than being created from the document set\n",
     "  - smoothed\n",
-    "  $idf(t) = 1 + log( \\frac{1 + n_d}{1+df(t)})$, cannot have 0 divisions on new data  \n",
+    "  $idf(t) = 1 + log( \\frac{1 + n_d}{1+df(t)})$, as if one document exists with every term, cannot have 0 divisions \n",
+    "  - a final step is to divide each document vector by norm of vector \n",
     "- sublinear tf = 1 + log(tf).   \n",
+    "- **Transformer saves the idf weights for each term**\n",
     "- **in case of short length texts, tf-idf can be noisy, binary vectorization is more appropriate**\n",
     "- **pipeline feature when building models, can allow for tuning all these as hyperparamters to a model**"
    ]
@@ -536,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
